# HZIEE_backup

./: .gitignore  README.md
CPP_Programming/Class01_0916/: fromNtoM.cpp
CPP_Programming/Class02_0923/: class02ex01Example.cpp
CPP_Programming/Class03_0930/: CMakeLists.txt
CPP_Programming/Class04_1014/: CMakeLists.txt
CPP_Programming/Class06_1028/: CMakeLists.txt  Question01.cpp
CPP_Programming/Class07_1104/: Question01.cpp  Question03.cpp  Question04.cpp
CPP_Programming/Class09_1118/: CMakeLists.txt  Question01.cpp  Question02.cpp
CPP_Programming/Class11_1202/: CMakeLists.txt  Exercise_Time.cpp  Simulation_01.cpp  Simulation_02.cpp  Simulation_03.cpp  test.cpp
CPP_Programming/Class13_1216/: CMakeLists.txt  Exercise_Circle.cpp  test.cpp
C_plus_plus_programming_development/Class02_0923/: CMakeLists.txt  (+2 more)
Hziee-Semester01/CPP_Programming/Class01_0916/: CMakeLists.txt  helloWorld.cpp  polynomialSummation.cpp  productOfOddNumbers.cpp
Hziee-Semester01/CPP_Programming/Class11_1202/: CMakeLists.txt  Exercise_Complex.cpp  Simulation_04.cpp  Simulation_05.cpp
WeChat_MiniProgram/: project.config.json
Web_Website/: class06-03.html  class07-01-new.html  class07-03.html  class07-04.html  class07-05.html  class08-01.html  class08-03.html  class08-04.html  class11-01.html  class11-02.html  class12-01.html
Web_Website_development/: class02-01.css  class02-01.html  class02-02.html  class02-ex04-11.html  class03-01.css  class03-01.html  class03-02-part1.html  class03-02-part2.html  class06-02.html  class06-04.html  class07-01.html  class07-03.html  index.html
(+2343 files in other folders)
