cmake_minimum_required(VERSION 3.20)
project(Class04_1014)

set(CMAKE_CXX_STANDARD 14)

add_executable(Class04_1014 main.cpp)
add_executable(ifSentence ifSentence.cpp)
add_executable(switchSentence switchSentence.cpp)
add_executable(doWhileSentence doWhileSentence.cpp)
add_executable(ex01 class04ex01.cpp)
add_executable(ex02 class04ex02.cpp)