cmake_minimum_required(VERSION 3.20)
project(Class01_0916)

set(CMAKE_CXX_STANDARD 14)

add_executable(Class01_0916 main.cpp)
add_executable(testEx helloWorld.cpp)
add_executable(ex01 acsiiOrder.cpp)
add_executable(ex02 calculationOfTriangularArea.cpp)
add_executable(ex03 fromNtoM.cpp)
add_executable(ex04 polynomialSummation.cpp)
add_executable(ex05 productOfOddNumbers.cpp)
