cmake_minimum_required(VERSION 3.20)
project(Class11_1202)

set(CMAKE_CXX_STANDARD 14)

add_executable(Class11_1202 main.cpp)
add_executable(Time Exercise_Time.cpp)
add_executable(Complex Exercise_Complex.cpp)
add_executable(S01 Simulation_01.cpp)
add_executable(S02 Simulation_02.cpp)
add_executable(S03 Simulation_03.cpp)
add_executable(S04 Simulation_04.cpp)
add_executable(S05 Simulation_05.cpp)
